# SuperColliderEssentiaUGens

./: .gitignore  CMakeLists.txt  EssentiaHFC.cpp  EssentiaHFC.sc  EssentiaSpectralComplexity.cpp  EssentiaSpectralComplexity.sc  README.md
essentiahfc/: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  regenerate
essentiahfc/plugins/EssentiaHFC/: EssentiaHFC.cpp  EssentiaHFC.hpp  EssentiaHFC.sc  EssentiaHFC.schelp
essentiaonsetdetector/: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  regenerate
essentiaonsetdetector/plugins/EssentiaOnsetDetector/: EssentiaOnsetDetector.cpp  EssentiaOnsetDetector.hpp  EssentiaOnsetDetector.sc  EssentiaOnsetDetector.schelp
essentiaspectralcomplexity/: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  regenerate
essentiaspectralcomplexity/plugins/EssentiaSpectralComplexity/: EssentiaSpectralComplexity.cpp  EssentiaSpectralComplexity.hpp  EssentiaSpectralComplexity.sc  EssentiaSpectralComplexity.schelp
